added items for real